recode and convert to java 8, update fairy